# HMD-project-public

./: README.md  pyproject.toml
extrinsic evaluation/: Extrinsic evaluation graphics.ipynb
intrinsic evaluation/DM/: DM with fewshots RI.ipynb  DM with fewshots.ipynb  DM without fewshots.ipynb
intrinsic evaluation/NLU/: P1.ipynb  P2.ipynb  P3.ipynb
notebooks/: HMD chicken V4 SEG.ipynb  HMD chicken V4.ipynb  HMD chicken V5 SEG FINAL.ipynb
