[tool.poetry]
name = "hmd-project"
version = "0.1.0"
description = "See README.md"
authors = ["Martijn Elands"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.11"
ipykernel = "^6.29.5"
matplotlib = "^3.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
